# nrf51-sensor-tag

./: .gitignore  Cargo.toml  README.md
examples/: ble_advert.rs  sensor_advertise.rs  sensor_semihosting.rs
src/: lib.rs
